<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/loginGraphicImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login_graphic" />

        <TextView
            android:id="@+id/loginSignupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginGraphicImageView"
            android:layout_marginTop="48dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginSignupTextView"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/login_description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginDescriptionTextView"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:maxLines="1" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameEditText"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/red"
            android:text="@string/login"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_marginTop="8dp"
            android:text="Don't have an account? Signup"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"/>
    </RelativeLayout>
</ScrollView>